syntax = "proto3";

package models;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service GuideOcelot {
    rpc GetVCSCreds (google.protobuf.Empty) returns (CredWrapper) {
        option (google.api.http) = {
			get: "/v1/creds"
		};
    }

    rpc SetVCSCreds (VCSCreds) returns (google.protobuf.Empty) {
        option (google.api.http) = {
			post: "/v1/creds"
			body: "*"
		};
    }

    rpc GetRepoCreds (google.protobuf.Empty) returns (RepoCredWrapper) {}
    rpc SetRepoCreds (RepoCreds) returns (google.protobuf.Empty) {}

    rpc GetAllCreds (google.protobuf.Empty) returns (AllCredsWrapper) {}

    rpc CheckConn (google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc BuildRuntime (BuildQuery) returns (BuildRuntimeInfo) {}
    rpc Logs (BuildQuery) returns (stream LogResponse) {}

}

message AllCredsWrapper {
    RepoCredWrapper repoCreds = 1;
    CredWrapper vcsCreds = 3;
}

message CredWrapper {
    repeated VCSCreds vcs = 2;
}

message VCSCreds {
    string clientId = 1;
    string clientSecret = 2;
    string tokenURL = 3;
    string acctName = 4;
    string type = 5;
}

message RepoCredWrapper {
    repeated RepoCreds repo = 3;
}

message RepoCreds {
    string username = 1;
    string password = 2;
    string repoUrl = 3;
    string acctName = 4;
    string type = 5;
}

message BuildQuery {
    string hash = 1;
}

message BuildRuntimeInfo {
    bool   done     = 1;
    string ip       = 2;
    string grpcPort = 3;
    string hash = 4;
}

message LogResponse {
    string outputLine = 1;
}